Add conditional jump instructions
Python if's and conditional jumps behave like
Java if's and conditional jumps. The primary difference
is Python will implictly convert TOS into a boolean,
and there are two variants that conditionally leave
TOS if the branch is taken.

Newly implemented Opcodes:

- JUMP_FORWARD
- POP_JUMP_IF_TRUE
- POP_JUMP_IF_FALSE
- JUMP_IF_TRUE_OR_POP
- JUMP_IF_FALSE_OR_POP